[package]
name = "serval-servo-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# WebSocket server
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"

# Servo dependencies (these would be actual Servo crates in production)
# For now, we'll create a minimal interface that could be replaced with real Servo
# servo = { path = "../path/to/servo/components/servo" }

[lib]
name = "serval_servo_backend"
path = "src/lib.rs"

[[bin]]
name = "servo-backend-server"
path = "src/main.rs"
